src/test/deca/context/valid/created/deux-classes-extends.deca
//Description :
// Test de deux classes imbriquées
//
// Resultats :
//


class Premiere {

}

class Deuxieme extends Premiere {

}

{

}
