src/test/deca/context/invalid/created/object_class2.deca
//Description :
//A hérite elle même
//
// Resultats :
// Erreur

class A extends A{}
